--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-api-starter-ts",
+  "name": "phasmobusters-api",
   "version": "1.2.0",
-  "description": " A basic starter for an express.js API with Typescript",
+  "description": "API for Phasmobusters mobile app",
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
