--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -34,6 +35,7 @@
     "@types/jest": "^29.5.13",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.5",
+    "@types/serve-favicon": "^2.5.7",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
